--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -103,3 +103,16 @@ a:not([href]):not([tabindex]) {
     cursor: pointer;
 }
 
+td.details-control {
+    background: url('../images/details_open.png') no-repeat center center;
+    cursor: pointer;
+}
+
+tr.shown td.details-control {
+    background: url('../images/details_close.png') no-repeat center center;
+}
+
+.subtable {
+    max-width: 200px;
+}
+
